fhir/10.0.0/POST_schedule-practitioner-gdpr.md
# POST Schedule Practitioner Gdpr - eHealth Infrastructure v10.0.0

* [**Table of Contents**](toc.md)
* **POST Schedule Practitioner Gdpr**

## POST Schedule Practitioner Gdpr

`POST [base]/$schedule-practitioner-gdpr`

**Request Headers**

```
Authorization: Bearer eyJhbGciOiJub25lIn0.eyJ1c2VyX2lkIjoiYWY2ODljNTQtOWMwYS00NzRmLWE3YmUtZTRhYWJkMmM1MTFmIiwicmVhbG1fYWNjZXNzIjp7InJvbGVzIjpbIiRmZXRjaC1wcmFjdGl0aW9uZXItZ2RwciIsInJlcG9ydC1ub24tYW5vbnltaXplZCIsIkJpbmFyeS5yZWFkIl19LCJjb250ZXh0Ijp7Im9yZ2FuaXphdGlvbl9pZCI6Imh0dHBzOi8vb3JnYW5pemF0aW9uLmNpdC1yZXBvcnRpbmctMTMxMy5sb2NhbC9maGlyL09yZ2FuaXphdGlvbi80MzEyOCIsInRlYW1fb25fZW9jIjpmYWxzZX0sInVzZXJfdHlwZSI6IlBSQUNUSVRJT05FUiJ9.
Accept: application/fhir+json;q=1.0, application/json+fhir;q=0.9
User-Agent: HAPI-FHIR/8.6.5 (FHIR Client; FHIR 4.0.1/R4; apache)
Accept-Encoding: gzip
Content-Type: application/fhir+json; charset=UTF-8

```

**Body**:

```
{
  "resourceType": "Parameters",
  "parameter": [
    {
      "name": "anonymization",
      "valueString": "None"
    },
    {
      "name": "organization",
      "valueReference": {
        "reference": "https://organization.cit-reporting-1313.local/fhir/Organization/43128"
      }
    },
    {
      "name": "practitioner",
      "valueReference": {
        "reference": "https://patient.cit-reporting-1313.local/fhir/Patient/51636"
      }
    }
  ]
}

```

**Response Headers**

```
date: Thu, 16 Apr 2026 11:43:56 GMT
x-request-id: 51cc8262-8ab5-4487-8493-8dba2aa67ee5
server: istio-envoy
x-envoy-upstream-service-time: 205
expires: 0
x-frame-options: DENY
pragma: no-cache
last-modified: Thu, 16 Apr 2026 11:43:56 GMT
x-content-type-options: nosniff
x-xss-protection: 0
x-b3-traceid: 68cf9507f7833c7f7d7a47796cf32ef7
x-powered-by: HAPI FHIR 8.6.5 REST Server (FHIR Server; FHIR 4.0.1/R4)
content-location: https://reporting.cit-reporting-1313.local/fhir/Binary/1001/_history/1
content-type: application/fhir+json; charset=UTF-8
location: https://reporting.cit-reporting-1313.local/fhir/Binary/1001/_history/1
cache-control: no-cache, no-store, max-age=0, must-revalidate

```

**Response**

```
{
  "resourceType": "Binary",
  "id": "1001",
  "meta": {
    "versionId": "1",
    "lastUpdated": "2026-04-16T11:43:56.323+00:00",
    "source": "#51cc8262-8ab5-4487-8493-8dba2aa67ee5",
    "profile": [
      "http://hl7.org/fhir/StructureDefinition/Binary"
    ]
  },
  "contentType": "text/plain",
  "securityContext": {
    "identifier": {
      "value": "af689c54-9c0a-474f-a7be-e4aabd2c511f"
    }
  },
  "data": "Kk5PVCBHRU5FUkFURUQgWUVUKg=="
}

```

